added name and company

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<p>On 12 February 2012, Dhoni made an unbeaten 44 to guide India to their first win over Australia at Adelaide. In the final over, he hit a monstrous six which travelled 112 meters off the bowling of Clint McKay. During the post-match presentation,
 		he described this six as more important than the one he hit during the ICC World Cup final in 2011.He was named as captain and wicketkeeper of the 'Team of the Tournament' for the 2014 T20 World Cup by the ICC.[129]</p>
 
-
+	<!-- thilakk kumar rubix technologies -->
 	<fieldset>
 		<legend>TO WHICH CATEGORY DHONI BELONG? </legend>
 		<input type="radio" id="batsman" name="cricket"><label for="batsman">BATSMAN</label>
